Fix alignment issues in card component

--- a/sass/components/cards.scss
+++ b/sass/components/cards.scss
@@ -6,10 +6,11 @@
   box-shadow: 0px 0px 5px 1px rgb(0 0 0 / 20%);
   display: flex;
   flex-direction: row;
+  overflow-wrap: break-word;
   .content--card-left {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 15px 40px;
     .content--card-title {
       font-family: typography.$font_biryani;
